# AutomobilePerformanceAnalysis

./: .dockerignore  .gitignore  Application and Proposal for Efficient Computation of Theta Functions via Poincaré Normal Form Reduction of Riemann Matrices.ipynb  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  main.ipynb  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
AutomobilePerformanceAnalysis/.ipynb_checkpoints/: main-checkpoint.ipynb
DeepfakeDetectionSystem/: .gitignore
data/processed/: auto_mpg_clean.csv
docs/: architecture.md
frontend/: index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  types.ts
frontend/src/components/: BenchmarkTable.tsx  FeatureImportanceChart.tsx  Hero.tsx  MetricsGrid.tsx  PredictionForm.tsx
frontend/src/lib/: api.ts  units.ts
frontend/src/styles/: index.css
src/auto_performance/: __init__.py  config.py  dataset.py
src/auto_performance/api/: app.py  docs_page.py  schemas.py  service.py
src/auto_performance/ml/: pipeline.py  training.py
tests/: test_api.py  test_dataset.py  test_training.py
